add toggle theme mode

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
-    <title>Jazz&Burgs | Пожалуй, лучшие бургеры в мире</title>
+    <title>Jazz&Burg's | Пожалуй, лучшие бургеры в мире</title>
 </head>
 <body>
 <div id="root"></div>
