fix scrollbar styles for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title>Jazz&Burg's | Пожалуй, лучшие бургеры в мире</title>
 </head>
 <body>
+<style>.payform-tinkoff-row{display:block;margin:1%;width:160px;}</style>
 <div id="root"></div>
+<script src="https://securepay.tinkoff.ru/html/payForm/js/tinkoff_v2.js"></script>
 </body>
 </html>
