changes in index.html title & description

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="лучшие бургеры в мире">
+    <meta name="description" content="Бургер-бар с авторскими бургерами по демократичным ценам">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Jazz&Burg's | Пожалуй, лучшие бургеры в мире</title>
+    <title>Jazz&Burg's - Бургер-бар с авторскими бургерами по демократичным ценам</title>
 </head>
 <body>
     <div id="root"></div>
