change description in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Бургер-бар с авторскими бургерами по демократичным ценам">
+    <meta name="description" content="Купить сочные бургеры от бургер-бара Jazz&Burg's. Уникальные рецепты, натуральные ингредиенты, безупречный вкус. Мы предлагаем лучшие бургеры!">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Jazz&Burg's - Бургер-бар с авторскими бургерами по демократичным ценам</title>
 </head>
